# fantasy_baseball

./: .gitignore  README.md  app.py  bd_utils.py  constants.py  fantasy_baseball.duckdb  load_data_db.py  processed_data.csv  pyproject.toml
processed_data/: performance_data.csv  player_data.csv  raw_file_processor.py
